[fix]: Hide scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,13 +22,13 @@
   width: 6px;
 }
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: transparent;
 }
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: transparent;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: transparent;
 }
 
 .css-xzqo2p-MuiButtonBase-root-MuiAccordionSummary-root{
